--- a/mutfiles/create_Mutfiles.ipynb
+++ b/mutfiles/create_Mutfiles.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "\n",
     "\n",
-    "            start_file.write(f\"sbatch ddg_app.job {native}{position}{mutant}\\n\")\n",
+    "            start_file.write(f\"sbatch ddG_app.job {native}{position}{mutant}\\n\")\n",
     "\n",
     "\n",
     "input_file = 'input.txt'\n",
